[FIX] web_editor: make dropdown menus scrollable
The user was not able to select some options of the color and style
pickers on the website editor.

The menus were displayed either at the top, behind the top actions bar,
or overflowing the bottom of the page on some small screens.

The solution was to display the widget dropdown menus below the
options (remove the transform that was displaying them at the top), and
make the container scrollable with overflow-y and a flex display.

Part of https://github.com/odoo/odoo/pull/65575
task-2446852

X-original-commit: a99ed0f4a261fba44b31e3fe7a5840d81727b6d0

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -125,8 +125,10 @@ $o-we-zindex: $o-we-overlay-zindex + 1 !default;
         outline: none !important;
     }
     .dropdown-menu {
+        transform: none !important;
         margin-top: $o-we-dropdown-spacing;
         padding: 0;
+        margin-top: $o-we-toolbar-height;
         border: $o-we-dropdown-border-width solid $o-we-dropdown-border-color;
         background-color: $o-we-dropdown-bg;
         box-shadow: $o-we-dropdown-shadow;
